--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,11 @@
 {
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
+  "framework": "react",
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "/api"
+      "destination": "/api/index.js"
     }
   ]
 }
